# haskell-csv

./: .gitignore  README.md  haskell-csv.cabal
app/: Main.hs
src/: CSVArgs.hs  Lib.hs
test/: Spec.hs  file.csv
