name:           haskell-csv
version:        0.0.2
description:    Please see the README on Github at <https://github.com/githubuser/haskell-csv#readme>
homepage:       https://github.com/githubuser/haskell-csv#readme
bug-reports:    https://github.com/githubuser/haskell-csv/issues
author:         Chris Albert
copyright:      2018 Chris Albert
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskell-csv

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , split  
    , cmdargs
    , lens
  exposed-modules:
      Lib
    , CSVArgs
  other-modules:
      Paths_haskell_csv
  default-language: Haskell2010

executable haskell-csv-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-csv
    , cmdargs
    , lens
    , split
  other-modules:
      Paths_haskell_csv
  default-language: Haskell2010

test-suite haskell-csv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-csv
    , HUnit
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  other-modules:
      Paths_haskell_csv
  default-language: Haskell2010
